--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     "Date": "8/1/2024",
                     "Artist": "TINA & HER PONY",
                     "Time": "6:00:00 PM",
-                    "Venue": "THE FUNKATROIUM",
+                    "Venue": "THE FUNKATORIUM",
                     "Genre": "Indie Folk"
                 },
                 {
@@ -1294,7 +1294,7 @@
                     "Date": "8/2/2024",
                     "Artist": "RUSS WILSON & HIS FAMOUS ORCHESTRA",
                     "Time": "9:00:00 PM",
-                    "Venue": "The Cellar",
+                    "Venue": "THE CELLAR",
                     "Genre": "Jazz/Swing"
                 },
                 {
