add official searchable schedule

--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 <body>
     <div x-data="musicShows()" class="container-fluid">
         <h1 class="text-center mt-4 mb-4">Unofficial AVLFest Schedule</h1>
+        <h2 class="text-center mt-4 mb-4">Whoa! Just saw this <a href="https://avlfest.com/schedule/schedule-sortable/">Official Sortable Schedule</a></h2>
         <p class="text-center mb-4">Welcome to the unofficial AVLFest schedule. </p>
         <p class="text-center mb-4">I got tired of the festival only providing a non searchable image of the schedule so I created this using data from Reddit user <a href="https://www.reddit.com/r/asheville/comments/1eaimxs/avl_fest_2024_schedule_data_for_you/">@EatAtDaves Post</a></p>
         <p class="text-center mb-4">And actually I created it use <a href="https://aider.chat">Aider</a> and claude-3-5-sonnet-20240620 in a few minutes ... then I got bored and went back to work. It's not perfect but I hope you find it useful. </p>
         <p class="text-center mb-4">Use the filters on the left to customize your view and find the shows you're most interested in.</p>
-        <p class="text-center mb-4">We're crowd sourcing the extra data. Thanks to Ryan Appleton of <a href="https://lazytigerhostel.com">Lazy Tiger Hostel</a> for kicking it off. If you have changes, updates or more info on the band's genre, home page or descriptions, that would be awesome. Please let me know <a href="mailto:Julio@E-String.com?subject=Unofficial AVLFest Schedule">Julio@E-String.com</a></p>
-        <p class="text-center mb-4">All data subject to change so check with the venue or official schedule before making plans.</p>
+        <p class="text-center mb-4">We're crowd sourcing the extra data. Thanks to Ryan Appleton of <a href="https://lazytigerhostel.com">Lazy Tiger Hostel</a> for kicking it off.</p>
+        <p class="text-center mb-4">All data subject to error and change so check with the venue or official schedule before making plans.</p>
+        <p class="text-center mb-4">
+        If you have changes, updates or more info on the band's genre, home page or descriptions, that would be awesome. Please let me know <a href="mailto:Julio@E-String.com?subject=Unofficial AVLFest Schedule">Julio@E-String.com</a></p>
+
         <p class="text-center mb-4">Oh and someone created <a href="https://open.spotify.com/playlist/62XybpyrzYJLniSIjbDqKR?si=zf7sX4_5Tc6ZMJ4ErVP-Ng&pi=u-_SR0JLuwTX-e&nd=1&dlsi=456050a0de3e43dd">Spotify playlist</a></p>
         <div class="row">
             <div class="col-md-3 bg-light p-3">
