add a few more links

--- a/index.html
+++ b/index.html
@@ -577,6 +577,7 @@
           Artist: "KID BILLY",
           Time: "7:30:00 PM",
           Venue: "ONE WORLD BREWING",
+          Site: "https://www.youtube.com/channel/UCOTvFwqcrmT8AwG5oGOZwbg",
         },
         {
           Date: "8/1/2024",
@@ -790,6 +791,7 @@
           Time: "10:30:00 PM",
           Venue: "ONE WORLD BREWING",
           Genre: "Indie Rock",
+          Site: "https://linktr.ee/shedbugs",
         },
         {
           Date: "8/1/2024",
